# rust-adorn

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: compiletest.rs  fn-dec-args.rs  fn-dec-sugar.rs  fn-dec.rs  nonstatic-methods-dec.rs  static-methods-dec.rs
